--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ baseurl: ""
 # Of course don't forget to change the username and projectname to YOUR username and project
 
 # Name of website
-title: I LOVE CYBER SECURITY 
+title: I LOVE CYBER SECURITY
 
 # Short description of your site
 description: A space presents info about my experience in cyber security and developing skills.
@@ -34,7 +34,7 @@ navbar-links:
 
 # Image to show in the navigation bar - image must be a square (width = height)
 # Remove this parameter if you don't want an image in the navbar
-avatar: "/img/profile.jpg"
+avatar: "/img/45808214_2196973253904305_5472808278167650304_n (1).jpg"
 
 # If you want to have an image logo in the top-left corner instead of the title text,
 # then specify the following parameter
