--- a/_config.yml
+++ b/_config.yml
@@ -14,10 +14,10 @@ baseurl: ""
 # Of course don't forget to change the username and projectname to YOUR username and project
 
 # Name of website
-title: I LOVE CYBER SECURITY
+title: Allan Sec
 
 # Short description of your site
-description: A space presents info about my experience in cyber security and developing skills.
+description: A space presents info about my experience in cyber security
 
 # --- Navigation bar options --- #
 
