--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ baseurl: ""
 # Of course don't forget to change the username and projectname to YOUR username and project
 
 # Name of website
-title: Allan Sec
+title: allan_infoSec
 
 # Short description of your site
 description: A space presents info about my experience in cyber security
@@ -77,7 +77,7 @@ social-network-links:
   email: "bohanzhang@my.unt.edu"
   facebook: profile.php?id=100007749556813
   github: allan9595
-  twitter: allan950404
+  twitter: allan_infoSec
 #  reddit: yourname
 #  google-plus: +DeanAttali
 #  linkedin: daattali
